<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <RadioGroup
        android:id="@+id/rgDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tea"
            android:layout_marginRight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/coffee" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/rgDrinks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="22dp"
        android:layout_marginTop="50dp"/>

    <CheckBox
        android:id="@+id/cbSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cbMilk"
        android:layout_marginTop="30dp"/>

    <CheckBox
        android:id="@+id/cbMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvAdd"
        app:layout_constraintStart_toEndOf="@+id/cbSugar"
        app:layout_constraintEnd_toStartOf="@+id/cbLemon"
        android:layout_marginTop="30dp"/>

    <CheckBox
        android:id="@+id/cbLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cbMilk"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tvChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbMilk"
        android:layout_marginTop="50dp"/>

    <Spinner
        android:id="@+id/sTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChoice"
        android:layout_marginTop="30dp"
        android:entries="@array/types_of_tea"/>

    <Spinner
        android:id="@+id/sCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChoice"
        android:layout_marginTop="30dp"
        android:entries="@array/types_of_coffee"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/b_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sTea"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>